# TodoList

./: .env.example  .gitignore  README.md  prompt.txt  pyproject.toml
docs/: API.md  ARCHITECTURE.md  UX.md
src/agents/: todo_agent.py
src/app/: __init__.py  db.py  main.py  nlp.py  schemas.py  services.py
src/app/routers/: __init__.py  tasks.py  timer.py
src/app/utils/: __init__.py  timecycle.py
src/cli/: __init__.py  main.py
src/gui/: __init__.py  app_tk.py
src/gui/widgets/: __init__.py  circular_timer.py
tests/: test_smoke.py  test_tasks_api.py
