[project]
name = "ai-todo-pomodoro"
version = "0.1.0"
description = "AI TODO agent + Pomodoro timer (API/CLI/GUI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlmodel>=0.0.22",
  "typer>=0.12",
  "rich>=13.7",
  "dateparser>=1.2",
  "playsound>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
